fixed alignment

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -275,7 +275,7 @@ li.brand-css{
 .epnlogo{
 	width:90%;
 	margin-top:40px;
-	margin-left:-10px;
+	margin-left:10px;
 }
 
 .coming-soon{
